# AlturasFastidiousPlannerDiscordBot

./: Cargo.toml  README.md
db_stand_in/: campaigns.csv  sessions.csv
src/: main.rs
