[package]
name = "AlturasFastidiousPlannerDiscordBot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
serde = "1.0.189"
serde_derive = "1.0.189"
serenity = "0.11"
uuid = "1.5.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
time = { version = "0.3.29", features = ["macros", "parsing"] }
